--- a/CUDA编程入门/examples/Makefile
+++ b/CUDA编程入门/examples/Makefile
@@ -1,11 +1,11 @@
 
-default: vec_add reduction asum mem mem-host
+default: vec_add 1B-reduction asum mem mem-host
 
 vec_add: vec_add.cu
 	nvcc -O3 -Xcompiler "-Wall -Wextra" vec_add.cu -o vec_add
 
-reduction: reduction.cu
-	nvcc -O3 -Xcompiler "-Wall -Wextra" reduction.cu -o reduction
+1B-reduction: 1B-reduction.cu
+	nvcc -O3 -Xcompiler "-Wall -Wextra" 1B-reduction.cu -o 1B-reduction
 
 asum: asum.cu
 	nvcc -O3 -Xcompiler "-Wall -Wextra" asum.cu -o asum
@@ -17,4 +17,4 @@ mem-host: mem-host.cu
 	nvcc -O3 -Xcompiler "-Wall -Wextra" mem-host.cu -o mem-host
 
 clean:
-	rm -f vec_add reduction asum mem mem-host
+	rm -f vec_add 1B-reduction asum mem mem-host
