--- a/CUDA编程入门/examples/Makefile
+++ b/CUDA编程入门/examples/Makefile
@@ -1,5 +1,5 @@
 
-default: vec_add 1B-reduction mem mem-host reduction_1 reduction_2 reduction_3
+default: vec_add 1B-reduction mem mem-host reduction_1 reduction_2 
 
 vec_add: vec_add.cu
 	nvcc -O3 -Xcompiler "-Wall -Wextra" vec_add.cu -o vec_add
@@ -20,4 +20,4 @@ reduction_2: reduction_2.cu
 	nvcc -O3 -Xcompiler "-Wall -Wextra" reduction_2.cu -o reduction_2
 
 clean:
-	rm -f vec_add 1B-reduction reduction_3 mem mem-host
+	rm -f vec_add 1B-reduction reduction_1 reduction_2 mem mem-host
