--- a/OpenMP编程入门/examples/Makefile
+++ b/OpenMP编程入门/examples/Makefile
@@ -1,4 +1,6 @@
 
+.PHONY: defaullt all clean
+
 default: all
 
 CC      = gcc
@@ -16,3 +18,6 @@ all: $(BINS)
 % : %.c
 	${CC} -o $@ $*.c $(CFLAGS) ${LDFLAGS} 
 	@echo
+
+clean:
+	rm -f $(BINS)
