--- a/CUDA编程入门/examples/Makefile
+++ b/CUDA编程入门/examples/Makefile
@@ -1,26 +1,15 @@
 
-default: vec_add 1B-reduction mem mem-host reduction_1 reduction_2  vec_dot
+CUCC     = nvcc
+CUFLAGS  = -O3 -Xcompiler "-Wall -Wextra"
 
-vec_add: vec_add.cu
-	nvcc -O3 -Xcompiler "-Wall -Wextra" vec_add.cu -o vec_add
+SRC_CU   = $(wildcard *.cu)
+DIR_CU   = $(notdir $(SRC_CU))
+BIN_CU  = $(patsubst %.cu,%,$(DIR_CU))
 
-1B-reduction: 1B-reduction.cu
-	nvcc -O3 -Xcompiler "-Wall -Wextra" 1B-reduction.cu -o 1B-reduction
+default: ${BIN_CU}
 
-mem: mem.cu
-	nvcc -O3 -Xcompiler "-Wall -Wextra" mem.cu -o mem
-
-mem-host: mem-host.cu
-	nvcc -O3 -Xcompiler "-Wall -Wextra" mem-host.cu -o mem-host
-
-reduction_1: reduction_1.cu
-	nvcc -O3 -Xcompiler "-Wall -Wextra" reduction_1.cu -o reduction_1
-
-reduction_2: reduction_2.cu
-	nvcc -O3 -Xcompiler "-Wall -Wextra" reduction_2.cu -o reduction_2
-
-vec_dot: vec_dot.cu
-	nvcc -O3 -Xcompiler "-Wall -Wextra" vec_dot.cu -o vec_dot
+% : %.cu
+	${CUCC} ${CUFLAGS} -o $@ $*.cu
 
 clean:
-	rm -f vec_add 1B-reduction reduction_1 reduction_2 mem mem-host vec_dot
+	rm -f ${BIN_CU}
